--- a/styles/index.css
+++ b/styles/index.css
@@ -98,10 +98,9 @@ header {
 .hero {
   height: 400px;
   color: white;
-  background-image: url(../assets/hero.jpg);
+  background-image: url(../assets/hero_2.png);
   background-size: cover;
   background-repeat: no-repeat;
-  background-position-y: -175px;
 }
 
 .hero .wrapper {
@@ -175,13 +174,11 @@ header {
 
 .projects {
   padding: 30px 0;
-  /* background-color: var(--grape); */
 }
 
 .projects__title {
   text-align: center;
   font-size: 3rem;
-  /* color: white; */
 
 }
 
