--- a/styles/index.css
+++ b/styles/index.css
@@ -26,7 +26,7 @@ body {
 }
 
 .wrapper {
-  padding: 0 80px;
+  padding: 0 20px;
 }
 
 h2 {
@@ -38,7 +38,7 @@ h2 {
 /* HEADER */
 
 header {
-  background-color: var(--blue);
+  background-color: var(--dark);
   color: white;
   top: 0;
 }
@@ -50,21 +50,46 @@ header {
   height: 80px;
 }
 
+.header__activator {
+  width: 70px;
+  height: 70px;
+  background-color: #343a40a8;
+  position: fixed;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 4.5rem;
+  border-radius: 50%;
+  right: 10px;
+  bottom: 10px;
+}
+
 nav {
   position: fixed;
-  right: -465px;
+  transition: 0.4s;
+  top: 30px;
+  right: -150px;
+}
+
+.show__nav {
+  right: 0;
 }
 
 .nav__list {
-  display: flex;
+  /* display: flex; */
   align-items: center;
   list-style: none;
 }
 
 .nav__list-item {
-  padding: 0 10px;
+  background-color: var(--dark);
   transition: 0.3s;
   font-size: 1.6rem;
+  border: 1px solid white;
+  border-right: none;
+  margin: 5px 0;
+  padding: 10px;
+  padding-right: 30px;
 }
 
 .nav__list-item:hover {
@@ -108,31 +133,48 @@ nav {
 /* HERO */
 
 .hero {
-  height: 560px;
   color: white;
   background-color: var(--blue);
-  border: 1px solid black;
+  /* border: 1px solid black; */
+  padding: 30px 0;
 }
 
 .hero .wrapper {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  padding: 0 0 0 20px;
+  align-items: center;
+  /* padding: 0 0 0 20px; */
   height: 100%;
+}
+
+.hero__photo-container {
+  width: 160px;
+  height: 160px;
+}
+
+.hero__photo-container img {
+  border-radius: 50%;
+  border: 8px solid white;
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+  top: 0;
 }
 
 .hero__title {
   text-transform: uppercase;
-  font-size: 5rem;
+  text-align: center;
+  /* font-size: 5rem; */
+  font-size: 4rem;
   display: block;
-  width: 300px;
-  margin-bottom: 20px;
+  margin: 20px 0;
 }
 
 .hero__description {
-  font-size: 2.5rem;
-  width: 500px;
+  font-size: 2rem;
+  /* font-size: 2.5rem; */
+  /* width: 900px; */
 }
 
 /* HABILITIES */
