--- a/styles/index.css
+++ b/styles/index.css
@@ -62,10 +62,12 @@ header {
   border-radius: 50%;
   right: 10px;
   bottom: 10px;
+  z-index: 3;
 }
 
 nav {
   position: fixed;
+  z-index: 2;
   transition: 0.4s;
   top: 30px;
   right: -150px;
@@ -243,6 +245,7 @@ nav {
 
 .projects {
   padding: 30px 0;
+  /* border: 1px solid black; */
 }
 
 .projects__title {
@@ -252,34 +255,60 @@ nav {
 
 .project__item-container {
   background-color: white;
-  padding: 40px;
-  width: 1000px;
+  position: relative;
+  /* padding: 40px; */
+  width: 98%;
+  height: 300px;
+  max-width: 700px;
+  flex-direction: column;
   display: flex;
   margin: 0 auto 35px;
-  border-radius: 30px;
+  border: 1px solid #0000001c;
+}
+
+.project__item-container:hover .project__description {
+  display: flex;
 }
 
 .project__image {
-  width: 500px;
+  width: 100%;
+  height: 100%;
+}
+
+.project__description {
+  transition: 1s;
+  /* padding-left: 50px; */
+  background-color: #0000009e;
+  /* display: flex; */
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 0 10px;
+  width: 100%;
+  height: 100%;
+  color: white;
+  position: absolute;
+  display: none;
+}
+
+.project__description p {
+  margin: 10px 0;
 }
 
 .project__description h4 {
   text-align: center;
-  font-size: 2rem;
-  padding-bottom: 20px;
-}
-
-.project__description {
-  padding-left: 50px;
+  font-size: 2.2rem;
+  padding: 15px 0;
+  /* padding-bottom: 20px; */
 }
 
 .project__description a {
-  margin: 30px auto 0;
+  margin: 10px auto;
   display: block;
   width: 150px;
-  border: 2px solid var(--light);
+  border: 2px solid white;
   border-radius: 8px;
-  color: var(--light);
+  color: white;
   text-align: center;
   padding: 10px 20px;
   text-decoration: none;
