--- a/styles/index.css
+++ b/styles/index.css
@@ -286,7 +286,7 @@ nav {
 }
 
 .project__item-container:hover .project__description {
-  right: 0;
+  left: 0;
   opacity: 1;
   display: flex;
 }
@@ -307,8 +307,8 @@ nav {
   width: 100%;
   height: 100%;
   color: white;
+  left: -1400px;
   position: absolute;
-  right: -1400px;
   opacity: 0;
   /* display: none; */
 }
