--- a/styles/index.css
+++ b/styles/index.css
@@ -280,54 +280,85 @@ nav {
   /* padding: 40px; */
   width: 98%;
   height: 300px;
-  max-width: 700px;
+  max-width: 400px;
   flex-direction: column;
   display: flex;
   margin: 0 auto 35px;
   border: 1px solid #0000001c;
+
+  overflow: hidden;
 }
 
 .project__item-container:hover .project__description {
-  left: 0;
-  opacity: 1;
-  display: flex;
+  background-color: #000000c4;
+}
+
+.project__item-container:hover .project__description-wrapper {
+  top: 0;
+}
+
+.project__item-container:hover .project__title-container {
+  bottom: -300px;
 }
 
 .project__image {
   width: 100%;
   height: 100%;
+  padding: 5px;
+  filter: blur(5px);
 }
 
 .project__description {
+  background-color: #01a5f7c7;
+  transition: 0.6s;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+}
+
+.project__title-container {
+  height: 100%;
+  width: 100%;
   display: flex;
-  transition: 0.8s;
-  background-color: #000000c4;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  bottom: 0;
+  transition: 0.6s;
+}
+
+.project__title-container h2 {
+  color: white;
+  font-size: 3.5rem;
+  text-shadow: -1px -1px 20px #00000099;
+}
+
+.project__description-wrapper {
+  display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  padding: 0 10px;
-  width: 100%;
-  height: 100%;
-  color: white;
-  left: -1400px;
   position: absolute;
-  opacity: 0;
-  /* display: none; */
+  color: white;
+  height: 100%;
+  top: -300px;
+  padding: 10px;
+  transition: 0.6s;
 }
 
 .project__description p {
-  margin: 10px 0;
+  margin: 10px;
+  text-align: center;
 }
 
 .project__description h4 {
   text-align: center;
   font-size: 2.2rem;
   padding: 15px 0;
-  /* padding-bottom: 20px; */
 }
 
 .project__description a {
-  margin: 10px auto;
+  margin: 20px auto;
   display: block;
   width: 150px;
   border: 2px solid white;
