Fix typos and add box-shadow

--- a/styles/index.css
+++ b/styles/index.css
@@ -130,6 +130,9 @@ nav {
   color: white;
   background-color: var(--blue);
   padding: 30px 0;
+  box-shadow: 1px 3px 5px 1px rgba(0, 0, 0, 0.28);
+  -webkit-box-shadow: 1px 3px 5px 1px rgba(0, 0, 0, 0.28);
+  -moz-box-shadow: 1px 3px 5px 1px rgba(0, 0, 0, 0.28);
 }
 
 .hero .wrapper {
@@ -155,7 +158,6 @@ nav {
 }
 
 .hero__title {
-  text-transform: uppercase;
   text-align: center;
   font-size: 4rem;
   display: block;
@@ -163,7 +165,7 @@ nav {
 }
 
 .hero__description {
-  font-size: 2rem;
+  font-size: 1.8rem;
 }
 
 /* HABILITIES */
@@ -186,11 +188,14 @@ nav {
   justify-content: center;
   align-items: center;
   width: 280px;
-  height: 170px;
+  height: 180px;
   background-color: white;
-  margin: 10px auto;
-  border: 1px solid #0000001c;
+  margin: 15px auto;
+  /* border: 1px solid #0000001c; */
   position: relative;
+  box-shadow: 1px 3px 5px 1px rgba(0, 0, 0, 0.28);
+  -webkit-box-shadow: 1px 3px 5px 1px rgba(0, 0, 0, 0.28);
+  -moz-box-shadow: 1px 3px 5px 1px rgba(0, 0, 0, 0.28);
 }
 
 .habilities__list-item:hover .hability__description {
@@ -256,17 +261,17 @@ nav {
 }
 
 .project__item-container {
-  background-color: white;
   position: relative;
-  width: 98%;
+  width: 95%;
   height: 300px;
   max-width: 400px;
   flex-direction: column;
   display: flex;
   margin: 0 auto 35px;
-  border: 1px solid #0000001c;
-
   overflow: hidden;
+  box-shadow: 1px 3px 5px 1px rgba(0, 0, 0, 0.28);
+  -webkit-box-shadow: 1px 3px 5px 1px rgba(0, 0, 0, 0.28);
+  -moz-box-shadow: 1px 3px 5px 1px rgba(0, 0, 0, 0.28);
 }
 
 .project__item-container:hover .project__description {
