--- a/styles/index.css
+++ b/styles/index.css
@@ -157,13 +157,16 @@ nav {
   height: 160px;
 }
 
-.hero__photo-container img {
+.hero__photo {
   border-radius: 50%;
   border: 8px solid white;
   object-fit: cover;
   width: 100%;
   height: 100%;
   top: 0;
+  background-image: url("../assets/me.jpg");
+  background-size: 100%;
+  background-repeat: no-repeat;
 }
 
 .hero__description {
