--- a/styles/index.css
+++ b/styles/index.css
@@ -376,6 +376,59 @@ nav {
   font-size: 1.8rem;
 }
 
+/* FORM */
+.form {
+  padding: 10px;
+  background-color: var(--dark);
+  padding: 20px 0;
+  color: white;
+}
+
+.form__item {
+  width: 100%;
+  max-width: 600px;
+  margin: 0 auto;
+}
+
+.form__item input {
+  width: 100%;
+  height: 35px;
+  padding: 5px;
+  margin: 5px 0 15px;
+}
+
+.form__item textarea {
+  width: 100%;
+  padding: 10px;
+  margin: 5px 0 15px;
+  font-family: "Roboto", sans-serif;
+}
+
+input:focus-visible,
+textarea:focus-visible {
+  outline: none;
+  border: 2px solid var(--blue);
+}
+
+.form__item button {
+  background-color: transparent;
+  color: white;
+  font-family: "Roboto", sans-serif;
+  margin: 15px auto;
+  padding: 10px 40px;
+  font-size: 1.7rem;
+  border: 2px solid white;
+  cursor: pointer;
+  font-weight: 600;
+  display: block;
+  transition: 0.3s;
+}
+
+.form__item button:hover {
+  background-color: var(--blue);
+  border: 2px solid transparent;
+}
+
 /* FOOTER */
 
 footer {
