--- a/styles/medium.css
+++ b/styles/medium.css
@@ -40,7 +40,7 @@ nav {
   margin: 10px;
 }
 
-.contact__container {
+/* .contact__container {
   display: flex;
 }
 
@@ -58,4 +58,4 @@ nav {
   margin: 0;
   margin-right: 20px;
   text-align: initial;
-}
+} */
