--- a/styles/index.css
+++ b/styles/index.css
@@ -70,7 +70,7 @@ header {
   font-size: 4.5rem;
   border-radius: 50%;
   right: 10px;
-  bottom: 85px;
+  bottom: 10px;
   z-index: 3;
 }
 
@@ -453,6 +453,9 @@ footer {
   list-style: none;
   display: flex;
   justify-content: center;
+  width: 250px;
+  flex-wrap: wrap;
+  margin: 0 auto;
 }
 
 .contact__social-item {
