--- a/styles/index.css
+++ b/styles/index.css
@@ -21,7 +21,7 @@ html {
 
 body {
   font-size: 1.6rem;
-  font-family: "Roboto", sans-serif;
+  font-family: 'Roboto', sans-serif;
   background-color: #ececec9e;
 }
 
@@ -51,7 +51,7 @@ header {
 }
 
 .header__title {
-  font-family: "Arimo", sans-serif;
+  font-family: 'Arimo', sans-serif;
   color: white;
   text-decoration: none;
   font-size: 2rem;
@@ -155,18 +155,15 @@ nav {
 .hero__photo-container {
   width: 160px;
   height: 160px;
+  border: 8px solid white;
+  overflow: hidden;
+  border-radius: 50%;
 }
 
 .hero__photo {
-  border-radius: 50%;
-  border: 8px solid white;
   object-fit: cover;
   width: 100%;
-  height: 100%;
   top: 0;
-  background-image: url("../assets/me.jpg");
-  background-size: 100%;
-  background-repeat: no-repeat;
 }
 
 .hero__description {
@@ -401,7 +398,7 @@ nav {
   width: 100%;
   padding: 10px;
   margin: 5px 0 15px;
-  font-family: "Roboto", sans-serif;
+  font-family: 'Roboto', sans-serif;
 }
 
 input:focus-visible,
@@ -413,7 +410,7 @@ textarea:focus-visible {
 .form__item button {
   background-color: transparent;
   color: white;
-  font-family: "Roboto", sans-serif;
+  font-family: 'Roboto', sans-serif;
   margin: 15px auto;
   padding: 10px 40px;
   font-size: 1.7rem;
