--- a/styles/medium.css
+++ b/styles/medium.css
@@ -40,22 +40,6 @@ nav {
   margin: 10px;
 }
 
-/* .contact__container {
-  display: flex;
+.project__description-buttons {
+  margin-top: 15px;
 }
-
-.contact__social ul {
-  list-style: none;
-  display: flex;
-  justify-content: initial;
-}
-
-.contact__social {
-  text-align: initial;
-}
-
-.contact__social-item {
-  margin: 0;
-  margin-right: 20px;
-  text-align: initial;
-} */
