--- a/styles/module.css
+++ b/styles/module.css
@@ -1,13 +1,3 @@
-:root {
-  --light: #fb7b3a;
-  --blue: #00bdd6;
-  --purple: #01a5f7;
-  --grape: #543a76;
-  --dark: #343a40;
-  --white: #fff;
-}
-
-/*MAIN*/
 * {
   margin: 0;
   padding: 0;
@@ -21,24 +11,24 @@ html {
 
 body {
   font-size: 1.6rem;
-  font-family: 'Roboto', sans-serif;
-  background-color: #ececec9e;
+  font-family: "Raleway", sans-serif;
+  color: white;
+  background-color: #2e2f2f;
+}
+
+h2 {
+  text-align: center;
+  font-size: 4rem;
+  padding-bottom: 30px;
+  font-weight: 100;
 }
 
 .wrapper {
   padding: 0 20px;
 }
 
-h2 {
-  text-align: center;
-  font-size: 3rem;
-  padding-bottom: 30px;
-}
-
-/* HEADER */
-
 header {
-  background-color: var(--dark);
+  background-color: #222;
   color: white;
   top: 0;
 }
@@ -51,11 +41,11 @@ header {
 }
 
 .header__title {
-  font-family: 'Arimo', sans-serif;
+  font-family: "Raleway", sans-serif;
   color: white;
   text-decoration: none;
-  font-size: 2rem;
-  font-weight: 600;
+  font-size: 2.3rem;
+  font-weight: 400;
   text-align: center;
 }
 
@@ -92,7 +82,7 @@ nav {
 }
 
 .nav__list-item {
-  background-color: var(--dark);
+  background-color: #222;
   transition: 0.3s;
   font-size: 1.6rem;
   margin: 5px 0;
@@ -104,7 +94,7 @@ nav {
 }
 
 .curriculum:hover {
-  background-color: var(--light);
+  background-color: #fb7b3a;
   border: none;
   transition: 0.3s;
 }
@@ -133,11 +123,9 @@ nav {
   border-radius: 10px 0 0 10px;
 }
 
-/* HERO */
-
 .hero {
   color: white;
-  background-color: var(--blue);
+  background-color: #222;
   padding: 30px 0;
   box-shadow: 1px 3px 5px 1px rgba(0, 0, 0, 0.28);
   -webkit-box-shadow: 1px 3px 5px 1px rgba(0, 0, 0, 0.28);
@@ -167,11 +155,11 @@ nav {
 }
 
 .hero__description {
-  margin: 20px 0;
+  margin: 40px 0 20px;
   font-size: 1.8rem;
+  line-height: 3rem;
 }
 
-/* HABILITIES */
 .habilities {
   margin: 30px 0;
 }
@@ -192,7 +180,7 @@ nav {
   align-items: center;
   width: 280px;
   height: 180px;
-  background-color: white;
+  background-color: #222;
   margin: 15px auto;
   /* border: 1px solid #0000001c; */
   position: relative;
@@ -252,15 +240,12 @@ nav {
   font-size: 2rem;
 }
 
-/* PROJECTS */
-
 .projects {
   padding: 30px 0;
 }
 
 .projects__title {
   text-align: center;
-  font-size: 3rem;
 }
 
 .project__item-container {
@@ -272,9 +257,6 @@ nav {
   display: flex;
   margin: 0 auto 35px;
   overflow: hidden;
-  box-shadow: 1px 3px 5px 1px rgba(0, 0, 0, 0.28);
-  -webkit-box-shadow: 1px 3px 5px 1px rgba(0, 0, 0, 0.28);
-  -moz-box-shadow: 1px 3px 5px 1px rgba(0, 0, 0, 0.28);
 }
 
 .project__item-container:hover .project__description {
@@ -297,7 +279,7 @@ nav {
 }
 
 .project__description {
-  background-color: #00bdd6c7;
+  background-color: #222222f7;
   transition: 0.6s;
   width: 100%;
   height: 100%;
@@ -318,7 +300,7 @@ nav {
 .project__title-container h2 {
   color: white;
   font-size: 3.5rem;
-  text-shadow: -1px -1px 20px #00000099;
+  font-weight: 300;
 }
 
 .project__description-wrapper {
@@ -333,6 +315,7 @@ nav {
   padding: 10px;
   transition: 0.6s;
 }
+
 .project__description-buttons {
   width: 100%;
   display: flex;
@@ -363,7 +346,7 @@ nav {
 }
 
 .project__description a:hover {
-  background-color: var(--blue);
+  background-color: #00bdd6;
   transition: 0.3s;
   color: white;
 }
@@ -373,14 +356,13 @@ nav {
 }
 
 .visit__GH a {
-  color: var(--blue);
+  color: #00bdd6;
   font-size: 1.8rem;
 }
 
-/* FORM */
 .form {
   padding: 10px;
-  background-color: var(--dark);
+  background-color: #222;
   padding: 20px 0;
   color: white;
 }
@@ -402,19 +384,29 @@ nav {
   width: 100%;
   padding: 10px;
   margin: 5px 0 15px;
-  font-family: 'Roboto', sans-serif;
+  border: 2px solid transparent;
+}
+
+.form__item input,
+.form__item textarea {
+  font-family: "Raleway", sans-serif;
+  background-color: #2e2f2f;
+  border: none;
+  color: white;
+  font-size: 1.5rem;
+  resize: none;
 }
 
 input:focus-visible,
 textarea:focus-visible {
   outline: none;
-  border: 2px solid var(--blue);
+  border: 2px solid #00bdd6;
 }
 
 .form__item button {
   background-color: transparent;
   color: white;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   margin: 15px auto;
   padding: 10px 40px;
   font-size: 1.7rem;
@@ -426,14 +418,12 @@ textarea:focus-visible {
 }
 
 .form__item button:hover {
-  background-color: var(--blue);
+  background-color: #00bdd6;
   border: 2px solid transparent;
 }
 
-/* FOOTER */
-
 footer {
-  background-color: var(--dark);
+  background-color: #222;
   padding: 30px 0;
   color: white;
   font-weight: 100;
@@ -494,3 +484,5 @@ footer {
   font-size: 1.7rem;
   font-weight: 400;
 }
+
+/*# sourceMappingURL=module.css.map */
