--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -1,7 +1,8 @@
 $light: #fb7b3a;
+$dark-strong: #222;
+$dark: #343a40;
 $blue: #00bdd6;
 $purple: #01a5f7;
 $grape: #543a76;
-$dark: #343a40;
 $white: #fff;
 $font: 'Raleway', sans-serif;
