--- a/styles/breakpoints/medium.scss
+++ b/styles/breakpoints/medium.scss
@@ -1,29 +1,36 @@
-.header-wrapper {
-  display: flex;
+@import '../variables.scss';
+// .header-wrapper {
+//   display: flex;
+//   justify-content: space-between;
+// }
+.header {
   justify-content: space-between;
+  align-items: center;
+  display: flex;
+  // position: sticky;
+  // z-index: 5;
+  &__title {
+    font-size: 2.3rem;
+  }
+  &__nav {
+    position: initial;
+  }
 }
 
 .nav__activator {
   display: none;
 }
 
-header {
-  position: sticky;
-  z-index: 5;
-}
-
-nav {
-  position: initial;
-}
-
-.nav__list {
+.nav-list {
   display: flex;
   justify-content: space-between;
-}
-
-.nav__list-item-link {
-  border: none;
-  padding-right: 10px;
+  &__item-link {
+    border: none;
+    padding-right: 10px;
+  }
+  &__item {
+    background-color: $dark-strong;
+  }
 }
 
 .hero {
