--- a/styles/header.css
+++ b/styles/header.css
@@ -1,23 +1,50 @@
-header {
-  background-color: #222;
+.header {
+  padding: 15px;
+  text-align: center;
   color: white;
-  top: 0;
+  background-color: #222;
 }
-
-.header-wrapper {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 80px;
-}
-
 .header__title {
   font-family: "Raleway", sans-serif;
   color: white;
   text-decoration: none;
-  font-size: 2.3rem;
-  font-weight: 400;
+  font-size: 3rem;
+  font-weight: 100;
   text-align: center;
+}
+.header__nav {
+  position: fixed;
+  z-index: 2;
+  transition: 0.4s;
+  top: 30px;
+  right: -150px;
+}
+
+.nav-list {
+  align-items: center;
+  list-style: none;
+}
+.nav-list__item {
+  background-color: #343a40;
+  transition: 0.3s;
+  font-size: 1.6rem;
+  margin: 5px 0;
+  border-radius: 10px 0 0 10px;
+  text-align: center;
+}
+.nav-list__item:hover {
+  font-size: 2.1rem;
+}
+.nav-list__item-link {
+  color: white;
+  text-decoration: none;
+  display: block;
+  width: 100%;
+  border: 1px solid white;
+  border-right: none;
+  padding: 10px;
+  padding-right: 30px;
+  border-radius: 10px 0 0 10px;
 }
 
 .nav__activator {
@@ -35,63 +62,8 @@ header {
   z-index: 3;
 }
 
-nav {
-  position: fixed;
-  z-index: 2;
-  transition: 0.4s;
-  top: 30px;
-  right: -150px;
-}
-
 .show__nav {
   right: 0;
-}
-
-.nav__list {
-  align-items: center;
-  list-style: none;
-}
-
-.nav__list-item {
-  background-color: #222;
-  transition: 0.3s;
-  font-size: 1.6rem;
-  margin: 5px 0;
-  border-radius: 10px 0 0 10px;
-}
-
-.nav__list-item:hover {
-  font-size: 2.1rem;
-}
-
-.curriculum:hover {
-  background-color: #fb7b3a;
-  border: none;
-  transition: 0.3s;
-}
-
-.curriculum:hover a {
-  color: white;
-}
-
-.curriculum a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100%;
-  width: 100%;
-}
-
-.nav__list-item-link {
-  color: white;
-  text-decoration: none;
-  display: block;
-  width: 100%;
-  border: 1px solid white;
-  border-right: none;
-  padding: 10px;
-  padding-right: 30px;
-  border-radius: 10px 0 0 10px;
 }
 
 /*# sourceMappingURL=header.css.map */
