--- a/styles/header.scss
+++ b/styles/header.scss
@@ -1,32 +1,61 @@
-$light: #fb7b3a;
-$blue: #00bdd6;
-$purple: #01a5f7;
-$grape: #543a76;
-$dark: #222;
-$white: #fff;
-$font: 'Raleway', sans-serif;
+@import 'variables.scss';
 
-header {
-  background-color: $dark;
-  color: white;
-  top: 0;
-}
-
-.header-wrapper {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 80px;
-}
-
-.header__title {
-  font-family: $font;
-  color: white;
-  text-decoration: none;
-  font-size: 2.3rem;
-  font-weight: 400;
+.header {
+  padding: 15px;
   text-align: center;
+  color: white;
+  background-color: $dark-strong;
+
+  &__title {
+    font-family: $font;
+    color: white;
+    text-decoration: none;
+    font-size: 3rem;
+    font-weight: 100;
+    text-align: center;
+  }
+
+  &__nav {
+    position: fixed;
+    z-index: 2;
+    transition: 0.4s;
+    top: 30px;
+    right: -150px;
+  }
 }
+
+.nav-list {
+  align-items: center;
+  list-style: none;
+  &__item {
+    background-color: $dark;
+    transition: 0.3s;
+    font-size: 1.6rem;
+    margin: 5px 0;
+    border-radius: 10px 0 0 10px;
+    text-align: center;
+  }
+
+  &__item:hover {
+    font-size: 2.1rem;
+  }
+
+  &__item-link {
+    color: white;
+    text-decoration: none;
+    display: block;
+    width: 100%;
+    border: 1px solid white;
+    border-right: none;
+    padding: 10px;
+    padding-right: 30px;
+    border-radius: 10px 0 0 10px;
+  }
+}
+
+// .header-wrapper {
+//   height: 80px;
+// }
 
 .nav__activator {
   width: 70px;
@@ -43,61 +72,30 @@ header {
   z-index: 3;
 }
 
-nav {
-  position: fixed;
-  z-index: 2;
-  transition: 0.4s;
-  top: 30px;
-  right: -150px;
-}
-
 .show__nav {
   right: 0;
 }
 
-.nav__list {
-  align-items: center;
-  list-style: none;
-}
+// .nav__list-item {
+// }
 
-.nav__list-item {
-  background-color: $dark;
-  transition: 0.3s;
-  font-size: 1.6rem;
-  margin: 5px 0;
-  border-radius: 10px 0 0 10px;
-}
+// .curriculum:hover {
+//   background-color: $light;
+//   border: none;
+//   transition: 0.3s;
+// }
 
-.nav__list-item:hover {
-  font-size: 2.1rem;
-}
+// .curriculum:hover a {
+//   color: white;
+// }
 
-.curriculum:hover {
-  background-color: $light;
-  border: none;
-  transition: 0.3s;
-}
+// .curriculum a {
+//   display: flex;
+//   justify-content: center;
+//   align-items: center;
+//   height: 100%;
+//   width: 100%;
+// }
 
-.curriculum:hover a {
-  color: white;
-}
-
-.curriculum a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100%;
-  width: 100%;
-}
-
-.nav__list-item-link {
-  color: white;
-  text-decoration: none;
-  display: block;
-  width: 100%;
-  border: 1px solid white;
-  border-right: none;
-  padding: 10px;
-  padding-right: 30px;
-  border-radius: 10px 0 0 10px;
-}
+// .nav__list-item-link {
+// }
