--- a/styles/header.css
+++ b/styles/header.css
@@ -11,6 +11,7 @@
   font-size: 3rem;
   font-weight: 100;
   text-align: center;
+  line-height: 4.3rem;
 }
 .header__nav {
   position: fixed;
@@ -21,30 +22,29 @@
 }
 
 .nav-list {
-  align-items: center;
   list-style: none;
+  text-align: left;
+  width: 129px;
 }
 .nav-list__item {
-  background-color: #343a40;
+  background-color: #222;
   transition: 0.3s;
   font-size: 1.6rem;
   margin: 5px 0;
-  border-radius: 10px 0 0 10px;
-  text-align: center;
 }
 .nav-list__item:hover {
-  font-size: 2.1rem;
+  font-size: 2rem;
+  border-bottom: 1px solid white;
 }
 .nav-list__item-link {
   color: white;
   text-decoration: none;
   display: block;
   width: 100%;
-  border: 1px solid white;
+  border: 1px solid #ffffff1f;
   border-right: none;
   padding: 10px;
   padding-right: 30px;
-  border-radius: 10px 0 0 10px;
 }
 
 .nav__activator {
