--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -15,7 +15,7 @@ body {
   font-size: 1.6rem;
   font-family: $font;
   color: white;
-  background-color: $dark;
+  background-color: $light;
 }
 
 h2 {
@@ -24,7 +24,3 @@ h2 {
   padding-bottom: 30px;
   font-weight: 100;
 }
-
-// .wrapper {
-//   padding: 0 20px;
-// }
