--- a/styles/hero.scss
+++ b/styles/hero.scss
@@ -1,38 +1,34 @@
-$dark: #222;
+@import './variables.scss';
 
 .hero {
   color: white;
   background-color: $dark;
   padding: 30px 0;
-  box-shadow: 1px 3px 5px 1px rgba(0, 0, 0, 0.28);
-  -webkit-box-shadow: 1px 3px 5px 1px rgba(0, 0, 0, 0.28);
-  -moz-box-shadow: 1px 3px 5px 1px rgba(0, 0, 0, 0.28);
-}
-
-.hero .wrapper {
+  text-align: center;
+  padding: 25px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 100%;
-}
+  @include lightShadow();
 
-.hero__photo-container {
-  width: 160px;
-  height: 160px;
-  border: 8px solid white;
-  overflow: hidden;
-  border-radius: 50%;
-}
+  &__photo-container {
+    width: 160px;
+    height: 160px;
+    border: 3px solid white;
+    overflow: hidden;
+    border-radius: 50%;
+  }
 
-.hero__photo {
-  object-fit: cover;
-  width: 100%;
-  top: 0;
-}
+  &__description {
+    margin: 20px 0 0;
+    font-size: 1.8rem;
+    line-height: 3rem;
+  }
 
-.hero__description {
-  margin: 40px 0 20px;
-  font-size: 1.8rem;
-  line-height: 3rem;
+  img {
+    object-fit: cover;
+    width: 100%;
+    top: 0;
+  }
 }
