--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -1,8 +1,16 @@
-$light: #fb7b3a;
+$light: #e2e2e2;
 $dark-strong: #222;
 $dark: #343a40;
-$blue: #00bdd6;
-$purple: #01a5f7;
-$grape: #543a76;
-$white: #fff;
 $font: 'Raleway', sans-serif;
+
+@mixin darkShadow() {
+  -webkit-box-shadow: 1px 3px 5px 1px rgba(0, 0, 0, 0.28);
+  box-shadow: 1px 3px 5px 1px rgba(0, 0, 0, 0.28);
+  -moz-box-shadow: 1px 3px 5px 1px rgba(0, 0, 0, 0.28);
+}
+
+@mixin lightShadow() {
+  -webkit-box-shadow: 1px 3px 5px 1px rgba(0, 0, 0, 0.28);
+  box-shadow: 1px 3px 5px 1px rgba(0, 0, 0, 0.28);
+  -moz-box-shadow: 1px 3px 5px 1px rgba(0, 0, 0, 0.28);
+}
