--- a/styles/breakpoints/medium.scss
+++ b/styles/breakpoints/medium.scss
@@ -7,6 +7,7 @@
   display: flex;
   position: sticky;
   z-index: 5;
+  height: 80px;
   &__title {
     font-size: 2.3rem;
     line-height: initial;
