--- a/styles/globals.css
+++ b/styles/globals.css
@@ -18,9 +18,10 @@ body {
 
 h2 {
   text-align: center;
-  font-size: 4rem;
+  font-size: 3.5rem;
   padding-bottom: 30px;
   font-weight: 100;
+  color: #343a40;
 }
 
 /*# sourceMappingURL=globals.css.map */
