--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -20,7 +20,8 @@ body {
 
 h2 {
   text-align: center;
-  font-size: 4rem;
+  font-size: 3.5rem;
   padding-bottom: 30px;
   font-weight: 100;
+  color: $dark;
 }
