--- a/styles/habilities.scss
+++ b/styles/habilities.scss
@@ -1,13 +1,18 @@
-$light: #fb7b3a;
-$blue: #00bdd6;
-$purple: #01a5f7;
-$grape: #543a76;
-$dark: #222;
-$white: #fff;
-$font: 'Raleway', sans-serif;
+@import './variables.scss';
 
 .habilities {
-  margin: 30px 0;
+  padding: 25px;
+  color: $dark;
+
+  ul {
+    list-style: none;
+  }
+
+  li {
+    margin: 20px 0;
+    line-height: 2rem;
+    text-align: justify;
+  }
 }
 
 .habilities__title {
