--- a/styles/habilities.scss
+++ b/styles/habilities.scss
@@ -4,89 +4,29 @@
   padding: 25px;
   color: $dark;
 
+  .habilities__title {
+    padding-bottom: 25px;
+  }
+
   ul {
-    list-style: none;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-auto-rows: 150px;
+    gap: 20px;
+    justify-items: center;
   }
 
   li {
-    margin: 20px 0;
-    line-height: 2rem;
-    text-align: justify;
+    color: white;
+    background-color: $dark;
+    padding: 20px;
+    line-height: 2.7rem;
+    font-size: 1.7rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    text-align: center;
+    @include darkShadow();
   }
-}
-
-.habilities__title {
-  padding-bottom: 15px;
-}
-
-.habilities__list {
-  width: 90%;
-  margin: 0 auto;
-}
-
-.habilities__list-item {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  width: 280px;
-  height: 180px;
-  background-color: $dark;
-  margin: 15px auto;
-  /* border: 1px solid #0000001c; */
-  position: relative;
-  box-shadow: 1px 3px 5px 1px rgba(0, 0, 0, 0.28);
-  -webkit-box-shadow: 1px 3px 5px 1px rgba(0, 0, 0, 0.28);
-  -moz-box-shadow: 1px 3px 5px 1px rgba(0, 0, 0, 0.28);
-}
-
-.habilities__list-item:hover .hability__description {
-  opacity: 1;
-}
-
-.hability__description {
-  background-color: #000000c4;
-  color: white;
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  padding: 10px;
-  opacity: 0;
-  transition: 0.5s;
-}
-
-.hability__logo {
-  width: 80px;
-  height: 75px;
-}
-
-.hability__logo img {
-  width: 100%;
-  height: 100%;
-}
-
-.hability__logo .css,
-.hability__logo .node {
-  width: 70px;
-  margin: 0 auto;
-  display: block;
-}
-
-.hability__logo .webpack {
-  height: 80px;
-  margin-top: -4px;
-}
-
-.hability__logo .bootstrap {
-  height: 65px;
-  margin-top: 4px;
-}
-
-.hability__title {
-  font-weight: 600;
-  padding-top: 10px;
-  font-size: 2rem;
 }
