--- a/styles/header.scss
+++ b/styles/header.scss
@@ -47,7 +47,7 @@
     text-decoration: none;
     display: block;
     width: 100%;
-    border: 1px solid #ffffff1f;
+    border: 1px solid $gray-borders;
     border-right: none;
     padding: 10px;
     padding-right: 30px;
