--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -2,14 +2,9 @@ $light: #e2e2e2;
 $dark-strong: #222;
 $dark: #343a40;
 $font: 'Raleway', sans-serif;
+$gray-borders: #ffffff1f;
 
 @mixin darkShadow() {
-  -webkit-box-shadow: 1px 3px 5px 1px rgba(0, 0, 0, 0.28);
-  box-shadow: 1px 3px 5px 1px rgba(0, 0, 0, 0.28);
-  -moz-box-shadow: 1px 3px 5px 1px rgba(0, 0, 0, 0.28);
-}
-
-@mixin lightShadow() {
   -webkit-box-shadow: 1px 3px 5px 1px rgba(0, 0, 0, 0.28);
   box-shadow: 1px 3px 5px 1px rgba(0, 0, 0, 0.28);
   -moz-box-shadow: 1px 3px 5px 1px rgba(0, 0, 0, 0.28);
