--- a/styles/breakpoints/medium.scss
+++ b/styles/breakpoints/medium.scss
@@ -56,6 +56,11 @@
 }
 
 /*PROJECT*/
+.project__description {
+  p {
+    font-size: 1.6rem;
+  }
+}
 .project__description-buttons {
   margin-top: 15px;
 }
