--- a/styles/projects.scss
+++ b/styles/projects.scss
@@ -1,31 +1,47 @@
-$light: #fb7b3a;
-$blue: #00bdd6;
-$purple: #01a5f7;
-$grape: hsl(266, 34%, 35%);
-$dark: #343a40;
-$white: #fff;
-$font: 'Raleway', sans-serif;
+@import './variables.scss';
 
 .projects {
-  padding: 30px 0;
-}
+  padding: 25px;
 
-.projects__title {
-  text-align: center;
+  .projects__title {
+    text-align: center;
+  }
+
+  .projects__container {
+    display: flex;
+    overflow-x: scroll;
+    margin-bottom: 15px;
+  }
+
+  ::-webkit-scrollbar {
+    background-color: transparent;
+    height: 6px;
+  }
+
+  ::-webkit-scrollbar-track {
+    background-color: #343a4024;
+  }
+
+  ::-webkit-scrollbar-thumb {
+    background-color: $dark;
+    border-radius: 5px;
+  }
 }
 
 .project__item-container {
   position: relative;
-  width: 95%;
+  width: 100%;
   height: 300px;
   max-width: 400px;
   flex-direction: column;
   display: flex;
-  margin: 0 auto 35px;
+  flex-shrink: 0;
+  margin: 0 20px 5px 0;
   overflow: hidden;
-  // box-shadow: 1px 3px 5px 1px rgba(0, 0, 0, 0.28);
-  // -webkit-box-shadow: 1px 3px 5px 1px rgba(0, 0, 0, 0.28);
-  // -moz-box-shadow: 1px 3px 5px 1px rgba(0, 0, 0, 0.28);
+}
+
+.project__item-container:last-child {
+  margin-right: 0;
 }
 
 .project__item-container:hover .project__description {
@@ -53,6 +69,10 @@ $font: 'Raleway', sans-serif;
   width: 100%;
   height: 100%;
   position: absolute;
+
+  p {
+    font-size: 1.5rem;
+  }
 }
 
 .project__title-container {
@@ -114,16 +134,18 @@ $font: 'Raleway', sans-serif;
 }
 
 .project__description a:hover {
-  background-color: $blue;
+  background-color: $selection;
   transition: 0.3s;
   color: white;
 }
 
 .visit__GH {
   text-align: center;
+  color: $dark;
 }
 
 .visit__GH a {
-  color: $blue;
+  color: $selection;
+  text-decoration: none;
   font-size: 1.8rem;
 }
