--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -3,6 +3,7 @@ $dark-strong: #222;
 $dark: #343a40;
 $font: 'Raleway', sans-serif;
 $gray-borders: #ffffff1f;
+$selection: #fb7b3a;
 
 @mixin darkShadow() {
   -webkit-box-shadow: 1px 3px 5px 1px rgba(0, 0, 0, 0.28);
