--- a/styles/form.css
+++ b/styles/form.css
@@ -1,6 +1,5 @@
 .form {
   padding: 10px;
-  background-color: #222;
   padding: 20px 0;
   color: white;
 }
@@ -10,17 +9,20 @@
   max-width: 600px;
   margin: 0 auto;
 }
+.form__item label {
+  color: #2e2f2f;
+}
 
 .form__item input {
   width: 100%;
   height: 35px;
-  padding: 5px;
+  padding: 5px 15px;
   margin: 5px 0 15px;
 }
 
 .form__item textarea {
   width: 100%;
-  padding: 10px;
+  padding: 15px;
   margin: 5px 0 15px;
   border: 2px solid transparent;
 }
@@ -38,17 +40,16 @@
 input:focus-visible,
 textarea:focus-visible {
   outline: none;
-  border: 2px solid #00bdd6;
 }
 
 .form__item button {
-  background-color: transparent;
+  background-color: #2e2f2f;
   color: white;
   font-family: "Roboto", sans-serif;
   margin: 15px auto;
-  padding: 10px 40px;
+  padding: 12px 42px;
   font-size: 1.7rem;
-  border: 2px solid white;
+  border: none;
   cursor: pointer;
   font-weight: 600;
   display: block;
@@ -56,8 +57,7 @@ textarea:focus-visible {
 }
 
 .form__item button:hover {
-  background-color: #00bdd6;
-  border: 2px solid transparent;
+  background-color: #fb7b3a;
 }
 
 /*# sourceMappingURL=form.css.map */
