--- a/styles/globals.css
+++ b/styles/globals.css
@@ -21,7 +21,7 @@ h2 {
   font-size: 3.5rem;
   padding-bottom: 30px;
   font-weight: 100;
-  color: #343a40;
+  color: #2e2f2f;
 }
 
 /*# sourceMappingURL=globals.css.map */
