--- a/styles/hero.css
+++ b/styles/hero.css
@@ -1,6 +1,6 @@
 .hero {
   color: white;
-  background-color: #343a40;
+  background-color: #2e2f2f;
   padding: 30px 0;
   text-align: center;
   padding: 25px;
