--- a/styles/module.css
+++ b/styles/module.css
@@ -21,7 +21,7 @@ h2 {
   font-size: 3.5rem;
   padding-bottom: 30px;
   font-weight: 100;
-  color: #343a40;
+  color: #2e2f2f;
 }
 
 .header {
@@ -98,7 +98,7 @@ h2 {
 
 .hero {
   color: white;
-  background-color: #343a40;
+  background-color: #2e2f2f;
   padding: 30px 0;
   text-align: center;
   padding: 25px;
@@ -130,7 +130,7 @@ h2 {
 
 .habilities {
   padding: 25px;
-  color: #343a40;
+  color: #2e2f2f;
 }
 .habilities .habilities__title {
   padding-bottom: 25px;
@@ -144,7 +144,7 @@ h2 {
 }
 .habilities li {
   color: white;
-  background-color: #343a40;
+  background-color: #2e2f2f;
   padding: 20px;
   line-height: 2.7rem;
   font-size: 1.7rem;
@@ -177,7 +177,7 @@ h2 {
   background-color: #343a4024;
 }
 .projects ::-webkit-scrollbar-thumb {
-  background-color: #343a40;
+  background-color: #2e2f2f;
   border-radius: 5px;
 }
 
@@ -294,7 +294,7 @@ h2 {
 
 .visit__GH {
   text-align: center;
-  color: #343a40;
+  color: #2e2f2f;
 }
 
 .visit__GH a {
@@ -305,7 +305,6 @@ h2 {
 
 .form {
   padding: 10px;
-  background-color: #222;
   padding: 20px 0;
   color: white;
 }
@@ -315,17 +314,20 @@ h2 {
   max-width: 600px;
   margin: 0 auto;
 }
+.form__item label {
+  color: #2e2f2f;
+}
 
 .form__item input {
   width: 100%;
   height: 35px;
-  padding: 5px;
+  padding: 5px 15px;
   margin: 5px 0 15px;
 }
 
 .form__item textarea {
   width: 100%;
-  padding: 10px;
+  padding: 15px;
   margin: 5px 0 15px;
   border: 2px solid transparent;
 }
@@ -343,17 +345,16 @@ h2 {
 input:focus-visible,
 textarea:focus-visible {
   outline: none;
-  border: 2px solid #00bdd6;
 }
 
 .form__item button {
-  background-color: transparent;
+  background-color: #2e2f2f;
   color: white;
   font-family: "Roboto", sans-serif;
   margin: 15px auto;
-  padding: 10px 40px;
+  padding: 12px 42px;
   font-size: 1.7rem;
-  border: 2px solid white;
+  border: none;
   cursor: pointer;
   font-weight: 600;
   display: block;
@@ -361,8 +362,7 @@ textarea:focus-visible {
 }
 
 .form__item button:hover {
-  background-color: #00bdd6;
-  border: 2px solid transparent;
+  background-color: #fb7b3a;
 }
 
 footer {
