--- a/styles/footer.css
+++ b/styles/footer.css
@@ -1,6 +1,6 @@
 footer {
   background-color: #222;
-  padding: 30px 0;
+  padding: 25px;
   color: white;
   font-weight: 100;
 }
@@ -45,6 +45,7 @@ footer {
 .contact__social-item:hover a i {
   font-size: 4rem;
   transition: 0.3s;
+  color: #fb7b3a;
 }
 
 .contact__social p {
