--- a/styles/footer.scss
+++ b/styles/footer.scss
@@ -1,14 +1,8 @@
-$light: #fb7b3a;
-$blue: #00bdd6;
-$purple: #01a5f7;
-$grape: #543a76;
-$dark: #222;
-$white: #fff;
-$font: 'Raleway', sans-serif;
+@import './variables.scss';
 
 footer {
-  background-color: $dark;
-  padding: 30px 0;
+  background-color: $dark-strong;
+  padding: 25px;
   color: white;
   font-weight: 100;
 }
@@ -53,6 +47,7 @@ footer {
 .contact__social-item:hover a i {
   font-size: 4rem;
   transition: 0.3s;
+  color: $selection;
 }
 
 .contact__social p {
