--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,10 +1,11 @@
-$light: #fb7b3a;
-$blue: #00bdd6;
-$purple: #01a5f7;
-$grape: #543a76;
-$dark: #2e2f2f;
-$white: #fff;
-$font: 'Raleway', sans-serif;
+// $light: #fb7b3a;
+// $blue: #00bdd6;
+// $purple: #01a5f7;
+// $grape: #543a76;
+// $dark: #2e2f2f;
+// $white: #fff;
+// $font: 'Raleway', sans-serif;
+@import './variables.scss';
 
 * {
   margin: 0;
