--- a/styles/globals.css
+++ b/styles/globals.css
@@ -11,7 +11,7 @@ html {
 
 body {
   font-size: 1.6rem;
-  font-family: 'Raleway', sans-serif;
+  font-family: "Raleway", sans-serif;
   color: white;
   background-color: #e2e2e2;
 }
