--- a/styles/footer.css
+++ b/styles/footer.css
@@ -45,7 +45,7 @@ footer {
 .contact__social-item:hover a i {
   font-size: 4rem;
   transition: 0.3s;
-  color: #fb7b3a;
+  color: #fb7c3c;
 }
 
 .contact__social p {
