--- a/styles/form.css
+++ b/styles/form.css
@@ -8,9 +8,6 @@
   max-width: 600px;
   margin: 0 auto;
 }
-.form__item label {
-  color: #2e2f2f;
-}
 
 .form__item input {
   width: 100%;
@@ -29,7 +26,7 @@
 .form__item input,
 .form__item textarea {
   font-family: "Raleway", sans-serif;
-  background-color: #2e2f2f;
+  background-color: #222;
   border: none;
   color: white;
   font-size: 1.5rem;
@@ -42,7 +39,7 @@ textarea:focus-visible {
 }
 
 .form__item button {
-  background-color: #2e2f2f;
+  background-color: #222;
   color: white;
   font-family: "Roboto", sans-serif;
   margin: 15px auto;
@@ -56,7 +53,7 @@ textarea:focus-visible {
 }
 
 .form__item button:hover {
-  background-color: #fb7b3a;
+  background-color: #fb7c3c;
 }
 
 /*# sourceMappingURL=form.css.map */
