--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -1,10 +1,10 @@
-$light: #e2e2e2;
+$light: #2e2f2f;
 $dark-strong: #222;
-$dark: #2e2f2f;
+$dark: #222;
 $font: 'Raleway', sans-serif;
 $gray-borders: #ffffff1f;
-$selection: #fb7b3a;
-$inputs: #2e2f2f;
+$selection: hsl(20, 96%, 61%);
+$inputs: #222;
 
 @mixin darkShadow() {
   -webkit-box-shadow: 1px 3px 5px 1px rgba(0, 0, 0, 0.28);
