--- a/styles/projects.scss
+++ b/styles/projects.scss
@@ -11,6 +11,8 @@
     display: flex;
     overflow-x: scroll;
     margin-bottom: 15px;
+    scroll-snap-type: x proximity;
+    overscroll-behavior-x: contain;
   }
 
   ::-webkit-scrollbar {
@@ -38,6 +40,7 @@
   flex-shrink: 0;
   margin: 0 20px 5px 0;
   overflow: hidden;
+  scroll-snap-align: center;
 }
 
 .project__item-container:last-child {
