--- a/styles/projects.css
+++ b/styles/projects.css
@@ -8,6 +8,8 @@
   display: flex;
   overflow-x: scroll;
   margin-bottom: 15px;
+  scroll-snap-type: x proximity;
+  overscroll-behavior-x: contain;
 }
 .projects ::-webkit-scrollbar {
   background-color: transparent;
@@ -31,6 +33,7 @@
   flex-shrink: 0;
   margin: 0 20px 5px 0;
   overflow: hidden;
+  scroll-snap-align: center;
 }
 
 .project__item-container:last-child {
