--- a/styles/header.css
+++ b/styles/header.css
@@ -4,9 +4,9 @@
   color: white;
   background-color: #222;
   position: relative;
-  -webkit-box-shadow: 1px 3px 5px 1px rgba(0, 0, 0, 0.28);
-  box-shadow: 1px 3px 5px 1px rgba(0, 0, 0, 0.28);
-  -moz-box-shadow: 1px 3px 5px 1px rgba(0, 0, 0, 0.28);
+  -webkit-box-shadow: 1px 3px 5px 1px #0000000d;
+  box-shadow: 1px 3px 5px 1px #0000000d;
+  -moz-box-shadow: 1px 3px 5px 1px #0000000d;
 }
 .header__title {
   font-family: "Raleway", sans-serif;
