--- a/styles/form.css
+++ b/styles/form.css
@@ -53,7 +53,8 @@ textarea:focus-visible {
 }
 
 .form__item button:hover {
-  background-color: #fb7c3c;
+  background-color: #fb7c3c40;
+  color: #fb7c3c;
 }
 
 /*# sourceMappingURL=form.css.map */
