--- a/styles/projects.scss
+++ b/styles/projects.scss
@@ -2,149 +2,266 @@
 
 .projects {
   padding: 25px;
-
-  .projects__title {
-    text-align: center;
-  }
-
-  .projects__container {
+  &__item-visuals {
+    width: 100%;
+    position: relative;
     display: flex;
-    overflow-x: scroll;
-    margin-bottom: 15px;
+    h3 {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      background-color: #00000075;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-weight: 400;
+      font-size: 3.5rem;
+      transition: 0.4s;
+    }
+
+    img {
+      width: 100%;
+    }
+
+    &-tools {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      background-color: #00000075;
+      opacity: 0;
+      transition: 0.4s;
+      h4 {
+        text-align: center;
+      }
+      ul {
+        font-size: 1.5rem;
+        width: 90%;
+        margin: 0 auto;
+      }
+    }
+
+    ul {
+      list-style: none;
+    }
   }
 
-  ::-webkit-scrollbar {
-    background-color: transparent;
-    height: 6px;
+  &__item-visuals:hover {
+    h3 {
+      opacity: 0;
+    }
   }
-
-  ::-webkit-scrollbar-track {
-    background-color: #343a4024;
-  }
-
-  ::-webkit-scrollbar-thumb {
-    background-color: $dark;
-    border-radius: 5px;
-  }
-}
-
-.project__item-container {
-  position: relative;
-  width: 100%;
-  height: 300px;
-  max-width: 400px;
-  flex-direction: column;
-  display: flex;
-  flex-shrink: 0;
-  margin: 0 20px 5px 0;
-  overflow: hidden;
-}
-
-.project__item-container:last-child {
-  margin-right: 0;
-}
-
-.project__item-container:hover .project__description {
-  background-color: #000000c4;
-}
-
-.project__item-container:hover .project__description-wrapper {
-  top: 0;
-}
-
-.project__item-container:hover .project__title-container {
-  bottom: -300px;
-}
-
-.project__image {
-  width: 100%;
-  height: 100%;
-  padding: 5px;
-  filter: blur(5px);
-}
-
-.project__description {
-  background-color: #222222f7;
-  transition: 0.6s;
-  width: 100%;
-  height: 100%;
-  position: absolute;
-
-  p {
-    font-size: 1.5rem;
+  .projects__item-visuals:hover .projects__item-visuals-tools {
+    opacity: 1;
   }
 }
 
-.project__title-container {
-  height: 100%;
-  width: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  position: absolute;
-  bottom: 0;
-  transition: 0.6s;
-}
+/* .projects {
+  padding: 25px;
+  &__item {
+    background-color: $dark-strong;
+    padding: 25px 30px;
+    display: flex;
+    justify-content: space-between;
+    @include darkShadow();
+    img {
+      width: 100%;
+      height: 100%;
+    }
+  }
 
-.project__title-container h2 {
-  color: white;
-  font-size: 3.5rem;
-  font-weight: 300;
-}
+  &__item-visuals {
+    width: 50%;
+    height: 100%;
+    position: relative;
+    display: flex;
+  }
 
-.project__description-wrapper {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  position: absolute;
-  color: white;
-  height: 100%;
-  top: -300px;
-  padding: 10px;
-  transition: 0.6s;
-}
-.project__description-buttons {
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
-}
+  &__item-description {
+    width: 50%;
+    text-align: justify;
+    padding-left: 30px;
+    line-height: 2.5rem;
+  }
 
-.project__description p {
-  margin: 10px;
-  text-align: center;
-}
+  &__item-description-buttons {
+    margin: 20px 0;
+    display: flex;
+    justify-content: center;
+    a {
+      border: 1px solid rgba(255, 255, 255, 0.411);
+      font-weight: 300;
+      padding: 10px 20px;
+      color: white;
+      text-decoration: none;
+      margin: 0 5px;
+      transition: 0.2s;
+    }
 
-.project__description h4 {
-  text-align: center;
-  font-size: 2.2rem;
-}
+    a:hover {
+      border: 1px solid transparent;
+      background-color: #fb7c3c40;
+      color: $selection;
+    }
+  }
 
-.project__description a {
-  margin: 5px 0px;
-  display: block;
-  width: 48%;
-  border: 2px solid white;
-  border-radius: 8px;
-  color: white;
-  text-align: center;
-  padding: 10px 0px;
-  text-decoration: none;
-  font-weight: 600;
-}
+  h3 {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    background-color: #00000099;
+    font-size: 4rem;
+    font-weight: 300;
+  }
+} */
 
-.project__description a:hover {
-  background-color: $selection;
-  transition: 0.3s;
-  color: white;
-}
+// .projects {
+//   padding: 25px;
 
-.visit__GH {
-  text-align: center;
-}
+//   .projects__title {
+//     text-align: center;
+//   }
 
-.visit__GH a {
-  color: $selection;
-  text-decoration: none;
-  font-size: 1.8rem;
-}
+//   .projects__container {
+//     display: flex;
+//     overflow-x: scroll;
+//     margin-bottom: 15px;
+//   }
+
+//   ::-webkit-scrollbar {
+//     background-color: transparent;
+//     height: 6px;
+//   }
+
+//   ::-webkit-scrollbar-track {
+//     background-color: #343a4024;
+//   }
+
+//   ::-webkit-scrollbar-thumb {
+//     background-color: $dark;
+//     border-radius: 5px;
+//   }
+// }
+
+// .project__item-container {
+//   position: relative;
+//   width: 100%;
+//   height: 300px;
+//   max-width: 400px;
+//   flex-direction: column;
+//   display: flex;
+//   flex-shrink: 0;
+//   margin: 0 20px 5px 0;
+//   overflow: hidden;
+// }
+
+// .project__item-container:last-child {
+//   margin-right: 0;
+// }
+
+// .project__item-container:hover .project__description {
+//   background-color: #000000c4;
+// }
+
+// .project__item-container:hover .project__description-wrapper {
+//   top: 0;
+// }
+
+// .project__item-container:hover .project__title-container {
+//   bottom: -300px;
+// }
+
+// .project__image {
+//   width: 100%;
+//   height: 100%;
+//   padding: 5px;
+//   filter: blur(5px);
+// }
+
+// .project__description {
+//   background-color: #222222f7;
+//   transition: 0.6s;
+//   width: 100%;
+//   height: 100%;
+//   position: absolute;
+
+//   p {
+//     font-size: 1.5rem;
+//   }
+// }
+
+// .project__title-container {
+//   height: 100%;
+//   width: 100%;
+//   display: flex;
+//   align-items: center;
+//   justify-content: center;
+//   position: absolute;
+//   bottom: 0;
+//   transition: 0.6s;
+// }
+
+// .project__title-container h2 {
+//   color: white;
+//   font-size: 3.5rem;
+//   font-weight: 300;
+// }
+
+// .project__description-wrapper {
+//   display: flex;
+//   flex-direction: column;
+//   align-items: center;
+//   justify-content: center;
+//   position: absolute;
+//   color: white;
+//   height: 100%;
+//   top: -300px;
+//   padding: 10px;
+//   transition: 0.6s;
+// }
+// .project__description-buttons {
+//   width: 100%;
+//   display: flex;
+//   justify-content: space-between;
+// }
+
+// .project__description p {
+//   margin: 10px;
+//   text-align: center;
+// }
+
+// .project__description h4 {
+//   text-align: center;
+//   font-size: 2.2rem;
+// }
+
+// .project__description a {
+//   margin: 5px 0px;
+//   display: block;
+//   width: 48%;
+//   border: 2px solid white;
+//   border-radius: 8px;
+//   color: white;
+//   text-align: center;
+//   padding: 10px 0px;
+//   text-decoration: none;
+//   font-weight: 600;
+// }
+
+// .project__description a:hover {
+//   background-color: $selection;
+//   transition: 0.3s;
+//   color: white;
+// }
+
+// .visit__GH {
+//   text-align: center;
+// }
+
+// .visit__GH a {
+//   color: $selection;
+//   text-decoration: none;
+//   font-size: 1.8rem;
+// }
