--- a/styles/breakpoints/medium.css
+++ b/styles/breakpoints/medium.css
@@ -51,5 +51,72 @@
 }
 
 /*PROJECT*/
+.projects {
+  padding: 25px;
+}
+.projects__item {
+  background-color: #222;
+  padding: 25px 30px;
+  display: flex;
+  justify-content: space-between;
+  -webkit-box-shadow: 1px 3px 5px 1px rgba(0, 0, 0, 0.28);
+  box-shadow: 1px 3px 5px 1px rgba(0, 0, 0, 0.28);
+  -moz-box-shadow: 1px 3px 5px 1px rgba(0, 0, 0, 0.28);
+}
+.projects__item img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.projects__item-visuals {
+  position: relative;
+  display: flex;
+}
+.projects__item-description {
+  width: 60%;
+  text-align: justify;
+  padding-left: 30px;
+  line-height: 2.5rem;
+}
+.projects__item-description p {
+  padding-bottom: 10px;
+}
+.projects__item-description h4 {
+  padding-bottom: 5px;
+}
+.projects__item-description ul {
+  padding-left: 25px;
+}
+.projects__item-description-buttons {
+  margin: 20px 0;
+  display: flex;
+  justify-content: center;
+}
+.projects__item-description-buttons a {
+  border: 1px solid rgba(255, 255, 255, 0.411);
+  font-weight: 300;
+  padding: 10px 20px;
+  color: white;
+  text-decoration: none;
+  margin: 0 5px;
+  transition: 0.2s;
+  font-size: 1.5rem;
+}
+.projects__item-description-buttons a:hover {
+  border: 1px solid transparent;
+  background-color: #fb7c3c40;
+  color: #fb7c3c;
+}
+.projects h3 {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  background-color: #00000099;
+  font-size: 4rem;
+  font-weight: 300;
+}
 
 /*# sourceMappingURL=medium.css.map */
