--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -12,16 +12,16 @@ html {
 }
 
 body {
-  font-size: 1.6rem;
-  font-family: $font;
-  color: white;
-  background-color: $light;
+  // font-size: 1.6rem;
+  // font-family: $font;
+  // color: white;
+  // background-color: $light;
 }
 
 h2 {
-  text-align: center;
-  font-size: 3.5rem;
-  padding-bottom: 30px;
-  font-weight: 100;
-  color: white;
+  // text-align: center;
+  // font-size: 3.5rem;
+  // padding-bottom: 30px;
+  // font-weight: 100;
+  // color: white;
 }
