--- a/styles/form.css
+++ b/styles/form.css
@@ -1,60 +1,17 @@
-.form {
-  padding: 25px;
-  color: white;
-}
+/* Error: Undefined variable.
+ *    ,
+ * 30 |   font-family: $font;
+ *    |                ^^^^^
+ *    '
+ *   styles/form.scss 30:16  root stylesheet */
 
-.form__item {
-  width: 100%;
-  max-width: 600px;
-  margin: 0 auto;
-}
-
-.form__item input {
-  width: 100%;
-  height: 35px;
-  padding: 5px 15px;
-  margin: 5px 0 15px;
-}
-
-.form__item textarea {
-  width: 100%;
-  padding: 15px;
-  margin: 5px 0 15px;
-  border: 2px solid transparent;
-}
-
-.form__item input,
-.form__item textarea {
-  font-family: "Raleway", sans-serif;
-  background-color: #222;
-  border: none;
-  color: white;
-  font-size: 1.5rem;
-  resize: none;
-}
-
-input:focus-visible,
-textarea:focus-visible {
-  outline: none;
-}
-
-.form__item button {
-  background-color: #222;
-  color: white;
-  font-family: "Roboto", sans-serif;
-  margin: 15px auto;
-  padding: 12px 42px;
-  font-size: 1.7rem;
-  border: none;
-  cursor: pointer;
-  font-weight: 600;
+body::before {
+  font-family: "Source Code Pro", "SF Mono", Monaco, Inconsolata, "Fira Mono",
+      "Droid Sans Mono", monospace, monospace;
+  white-space: pre;
   display: block;
-  transition: 0.3s;
+  padding: 1em;
+  margin-bottom: 1em;
+  border-bottom: 2px solid black;
+  content: "Error: Undefined variable.\a    \2577 \a 30 \2502    font-family: $font;\a    \2502                 ^^^^^\a    \2575 \a   styles/form.scss 30:16  root stylesheet";
 }
-
-.form__item button:hover {
-  background-color: #fb7c3c40;
-  color: #fb7c3c;
-}
-
-/*# sourceMappingURL=form.css.map */
