--- a/styles/habilities.css
+++ b/styles/habilities.css
@@ -1,31 +1,17 @@
-.habilities {
-  padding: 25px;
-  color: #222;
-}
-.habilities .habilities__title {
-  padding-bottom: 25px;
-}
-.habilities ul {
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-auto-rows: 150px;
-  gap: 20px;
-  justify-items: center;
-}
-.habilities li {
-  color: white;
-  background-color: #222;
-  padding: 20px;
-  line-height: 2.7rem;
-  font-size: 1.7rem;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 100%;
-  text-align: center;
-  -webkit-box-shadow: 1px 3px 5px 1px rgba(0, 0, 0, 0.28);
-  box-shadow: 1px 3px 5px 1px rgba(0, 0, 0, 0.28);
-  -moz-box-shadow: 1px 3px 5px 1px rgba(0, 0, 0, 0.28);
-}
+/* Error: Undefined variable.
+ *   ,
+ * 5 |   color: $dark;
+ *   |          ^^^^^
+ *   '
+ *   styles/habilities.scss 5:10  root stylesheet */
 
-/*# sourceMappingURL=habilities.css.map */
+body::before {
+  font-family: "Source Code Pro", "SF Mono", Monaco, Inconsolata, "Fira Mono",
+      "Droid Sans Mono", monospace, monospace;
+  white-space: pre;
+  display: block;
+  padding: 1em;
+  margin-bottom: 1em;
+  border-bottom: 2px solid black;
+  content: "Error: Undefined variable.\a   \2577 \a 5 \2502    color: $dark;\a   \2502           ^^^^^\a   \2575 \a   styles/habilities.scss 5:10  root stylesheet";
+}
