--- a/styles/header.css
+++ b/styles/header.css
@@ -1,73 +1,39 @@
 .header {
-  padding: 15px;
-  text-align: center;
-  color: white;
-  background-color: #222;
-  position: relative;
-  -webkit-box-shadow: 1px 3px 5px 1px #0000000d;
-  box-shadow: 1px 3px 5px 1px #0000000d;
-  -moz-box-shadow: 1px 3px 5px 1px #0000000d;
+  height: 500px;
+  padding: 25px;
+  background-color: #1e2233;
 }
-.header__title {
-  font-family: "Raleway", sans-serif;
-  color: white;
-  text-decoration: none;
-  font-size: 3rem;
-  font-weight: 100;
-  text-align: center;
-  line-height: 4.3rem;
-}
-.header__nav {
-  position: fixed;
-  z-index: 2;
-  transition: 0.4s;
-  top: 30px;
-  right: -150px;
-}
-
-.nav-list {
-  list-style: none;
-  text-align: left;
-  width: 129px;
-}
-.nav-list__item {
-  background-color: #222;
-  transition: 0.3s;
-  font-size: 1.6rem;
-  margin: 5px 0;
-}
-.nav-list__item:hover {
-  font-size: 2rem;
-  border-bottom: 1px solid white;
-}
-.nav-list__item-link {
-  color: white;
-  text-decoration: none;
-  display: block;
-  width: 100%;
-  border: 1px solid #ffffff1f;
-  border-right: none;
-  padding: 10px;
-  padding-right: 30px;
-}
-
-.nav__activator {
-  width: 70px;
-  height: 70px;
-  background-color: #fb7b3a9e;
-  position: fixed;
+.header__top {
   display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 4.5rem;
-  border-radius: 50%;
-  right: 10px;
-  bottom: 10px;
-  z-index: 3;
+  justify-content: space-between;
 }
-
-.show__nav {
-  right: 0;
+.header__top-title {
+  display: flex;
+  align-items: center;
+}
+.header__top-title img {
+  width: 30px;
+  height: 30px;
+  margin-right: 10px;
+}
+.header__top-title a {
+  color: white;
+  font-size: 2.5rem;
+  font-family: "Raleway", sans-serif;
+  text-decoration: none;
+  letter-spacing: 0.7rem;
+}
+.header .nav__list {
+  display: flex;
+  align-items: center;
+}
+.header .nav__list a {
+  margin-left: 20px;
+  color: white;
+  text-decoration: none;
+  font-size: 1.6rem;
+  font-family: "Raleway", sans-serif;
+  font-weight: 600;
 }
 
 /*# sourceMappingURL=header.css.map */
