--- a/styles/header.scss
+++ b/styles/header.scss
@@ -1,74 +1,115 @@
 @import 'variables.scss';
 
 .header {
-  padding: 15px;
-  text-align: center;
-  color: white;
-  background-color: $dark-strong;
-  position: relative;
-  @include lightShadow();
-  &__title {
-    font-family: $font;
-    color: white;
-    text-decoration: none;
-    font-size: 3rem;
-    font-weight: 100;
-    text-align: center;
-    line-height: 4.3rem;
+  height: 500px;
+  padding: 25px;
+  background-color: $primary;
+  &__top {
+    display: flex;
+    justify-content: space-between;
+    &-title {
+      display: flex;
+      align-items: center;
+      img {
+        width: 30px;
+        height: 30px;
+        margin-right: 10px;
+      }
+      a {
+        color: white;
+        font-size: 2.5rem;
+        font-family: $fontLogo;
+        text-decoration: none;
+        letter-spacing: 0.7rem;
+      }
+    }
   }
 
-  &__nav {
-    position: fixed;
-    z-index: 2;
-    transition: 0.4s;
-    top: 30px;
-    right: -150px;
-  }
-}
-
-.nav-list {
-  list-style: none;
-  text-align: left;
-  width: 129px;
-  &__item {
-    background-color: $dark-strong;
-    transition: 0.3s;
-    font-size: 1.6rem;
-    margin: 5px 0;
-  }
-
-  &__item:hover {
-    font-size: 2rem;
-    border-bottom: 1px solid white;
-  }
-
-  &__item-link {
-    color: white;
-    text-decoration: none;
-    display: block;
-    width: 100%;
-    border: 1px solid $gray-borders;
-    border-right: none;
-    padding: 10px;
-    padding-right: 30px;
+  .nav {
+    &__list {
+      display: flex;
+      align-items: center;
+      a {
+        margin-left: 20px;
+        color: white;
+        text-decoration: none;
+        font-size: 1.6rem;
+        font-family: $fontLogo;
+        font-weight: 600;
+      }
+    }
   }
 }
 
-.nav__activator {
-  width: 70px;
-  height: 70px;
-  background-color: #fb7b3a9e;
-  position: fixed;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 4.5rem;
-  border-radius: 50%;
-  right: 10px;
-  bottom: 10px;
-  z-index: 3;
-}
+// .header {
+//   padding: 15px;
+//   text-align: center;
+//   color: white;
+//   background-color: $dark-strong;
+//   position: relative;
+//   @include lightShadow();
+//   &__title {
+//     font-family: $font;
+//     color: white;
+//     text-decoration: none;
+//     font-size: 3rem;
+//     font-weight: 100;
+//     text-align: center;
+//     line-height: 4.3rem;
+//   }
 
-.show__nav {
-  right: 0;
-}
+//   &__nav {
+//     position: fixed;
+//     z-index: 2;
+//     transition: 0.4s;
+//     top: 30px;
+//     right: -150px;
+//   }
+// }
+
+// .nav-list {
+//   list-style: none;
+//   text-align: left;
+//   width: 129px;
+//   &__item {
+//     background-color: $dark-strong;
+//     transition: 0.3s;
+//     font-size: 1.6rem;
+//     margin: 5px 0;
+//   }
+
+//   &__item:hover {
+//     font-size: 2rem;
+//     border-bottom: 1px solid white;
+//   }
+
+//   &__item-link {
+//     color: white;
+//     text-decoration: none;
+//     display: block;
+//     width: 100%;
+//     border: 1px solid $gray-borders;
+//     border-right: none;
+//     padding: 10px;
+//     padding-right: 30px;
+//   }
+// }
+
+// .nav__activator {
+//   width: 70px;
+//   height: 70px;
+//   background-color: #fb7b3a9e;
+//   position: fixed;
+//   display: flex;
+//   justify-content: center;
+//   align-items: center;
+//   font-size: 4.5rem;
+//   border-radius: 50%;
+//   right: 10px;
+//   bottom: 10px;
+//   z-index: 3;
+// }
+
+// .show__nav {
+//   right: 0;
+// }
