--- a/styles/hero.css
+++ b/styles/hero.css
@@ -1,33 +1,17 @@
-.hero {
-  color: white;
-  background-color: #222;
-  padding: 30px 0;
-  text-align: center;
-  padding: 25px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  -webkit-box-shadow: 1px 3px 5px 1px rgba(0, 0, 0, 0.28);
-  box-shadow: 1px 3px 5px 1px rgba(0, 0, 0, 0.28);
-  -moz-box-shadow: 1px 3px 5px 1px rgba(0, 0, 0, 0.28);
-}
-.hero__photo-container {
-  width: 160px;
-  height: 160px;
-  border: 3px solid white;
-  overflow: hidden;
-  border-radius: 50%;
-}
-.hero__description {
-  margin: 20px 0 0;
-  font-size: 1.8rem;
-  line-height: 3rem;
-}
-.hero img {
-  object-fit: cover;
-  width: 100%;
-  top: 0;
-}
+/* Error: Undefined variable.
+ *   ,
+ * 5 |   background-color: $dark;
+ *   |                     ^^^^^
+ *   '
+ *   styles/hero.scss 5:21  root stylesheet */
 
-/*# sourceMappingURL=hero.css.map */
+body::before {
+  font-family: "Source Code Pro", "SF Mono", Monaco, Inconsolata, "Fira Mono",
+      "Droid Sans Mono", monospace, monospace;
+  white-space: pre;
+  display: block;
+  padding: 1em;
+  margin-bottom: 1em;
+  border-bottom: 2px solid black;
+  content: "Error: Undefined variable.\a   \2577 \a 5 \2502    background-color: $dark;\a   \2502                      ^^^^^\a   \2575 \a   styles/hero.scss 5:21  root stylesheet";
+}
