--- a/styles/module.css
+++ b/styles/module.css
@@ -9,437 +9,42 @@ html {
   scroll-behavior: smooth;
 }
 
-body {
-  font-size: 1.6rem;
-  font-family: "Raleway", sans-serif;
-  color: white;
-  background-color: #2e2f2f;
-}
-
-h2 {
-  text-align: center;
-  font-size: 3.5rem;
-  padding-bottom: 30px;
-  font-weight: 100;
-  color: white;
-}
-
 .header {
-  padding: 15px;
-  text-align: center;
-  color: white;
-  background-color: #222;
-  position: relative;
-  -webkit-box-shadow: 1px 3px 5px 1px #0000000d;
-  box-shadow: 1px 3px 5px 1px #0000000d;
-  -moz-box-shadow: 1px 3px 5px 1px #0000000d;
+  height: 500px;
+  padding: 25px;
+  background-color: #1e2233;
 }
-.header__title {
+.header__top {
+  display: flex;
+  justify-content: space-between;
+}
+.header__top-title {
+  display: flex;
+  align-items: center;
+}
+.header__top-title img {
+  width: 30px;
+  height: 30px;
+  margin-right: 10px;
+}
+.header__top-title a {
+  color: white;
+  font-size: 2.5rem;
   font-family: "Raleway", sans-serif;
+  text-decoration: none;
+  letter-spacing: 0.7rem;
+}
+.header .nav__list {
+  display: flex;
+  align-items: center;
+}
+.header .nav__list a {
+  margin-left: 20px;
   color: white;
   text-decoration: none;
-  font-size: 3rem;
-  font-weight: 100;
-  text-align: center;
-  line-height: 4.3rem;
-}
-.header__nav {
-  position: fixed;
-  z-index: 2;
-  transition: 0.4s;
-  top: 30px;
-  right: -150px;
-}
-
-.nav-list {
-  list-style: none;
-  text-align: left;
-  width: 129px;
-}
-.nav-list__item {
-  background-color: #222;
-  transition: 0.3s;
   font-size: 1.6rem;
-  margin: 5px 0;
-}
-.nav-list__item:hover {
-  font-size: 2rem;
-  border-bottom: 1px solid white;
-}
-.nav-list__item-link {
-  color: white;
-  text-decoration: none;
-  display: block;
-  width: 100%;
-  border: 1px solid #ffffff1f;
-  border-right: none;
-  padding: 10px;
-  padding-right: 30px;
-}
-
-.nav__activator {
-  width: 70px;
-  height: 70px;
-  background-color: #fb7b3a9e;
-  position: fixed;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 4.5rem;
-  border-radius: 50%;
-  right: 10px;
-  bottom: 10px;
-  z-index: 3;
-}
-
-.show__nav {
-  right: 0;
-}
-
-.hero {
-  color: white;
-  background-color: #222;
-  padding: 30px 0;
-  text-align: center;
-  padding: 25px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  -webkit-box-shadow: 1px 3px 5px 1px rgba(0, 0, 0, 0.28);
-  box-shadow: 1px 3px 5px 1px rgba(0, 0, 0, 0.28);
-  -moz-box-shadow: 1px 3px 5px 1px rgba(0, 0, 0, 0.28);
-}
-.hero__photo-container {
-  width: 160px;
-  height: 160px;
-  border: 3px solid white;
-  overflow: hidden;
-  border-radius: 50%;
-}
-.hero__description {
-  margin: 20px 0 0;
-  font-size: 1.8rem;
-  line-height: 3rem;
-}
-.hero img {
-  object-fit: cover;
-  width: 100%;
-  top: 0;
-}
-
-.habilities {
-  padding: 25px;
-  color: #222;
-}
-.habilities .habilities__title {
-  padding-bottom: 25px;
-}
-.habilities ul {
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-auto-rows: 150px;
-  gap: 20px;
-  justify-items: center;
-}
-.habilities li {
-  color: white;
-  background-color: #222;
-  padding: 20px;
-  line-height: 2.7rem;
-  font-size: 1.7rem;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 100%;
-  text-align: center;
-  -webkit-box-shadow: 1px 3px 5px 1px rgba(0, 0, 0, 0.28);
-  box-shadow: 1px 3px 5px 1px rgba(0, 0, 0, 0.28);
-  -moz-box-shadow: 1px 3px 5px 1px rgba(0, 0, 0, 0.28);
-}
-
-.projects {
-  padding: 25px;
-}
-.projects__item-visuals {
-  width: 100%;
-  height: 180px;
-  position: relative;
-  display: flex;
-  max-width: 420px;
-  margin: 0 auto;
-}
-.projects__item-visuals h3 {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  background-color: #00000075;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-weight: 400;
-  font-size: 3.5rem;
-  transition: 0.4s;
-}
-.projects__item-visuals img {
-  width: 100%;
-  object-fit: cover;
-}
-.projects__item-visuals-tools {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  background-color: #000000b6;
-  opacity: 0;
-  transition: 0.4s;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-}
-.projects__item-visuals-tools h4 {
-  text-align: center;
-  padding-bottom: 8px;
-  font-size: 1.7rem;
-}
-.projects__item-visuals-tools ul {
-  font-size: 1.4rem;
-  width: 90%;
-  margin: 0 auto;
-}
-.projects__item-visuals-tools li {
-  padding-bottom: 5px;
-}
-.projects__item-visuals ul {
-  list-style: none;
-}
-.projects__item-description {
-  max-width: 420px;
-  margin: 0 auto;
-  line-height: 2.3rem;
-  margin-top: 5px;
-}
-.projects__item-visuals:hover h3 {
-  opacity: 0;
-}
-.projects .projects__item-visuals:hover .projects__item-visuals-tools {
-  opacity: 1;
-}
-
-.projects__item-description-buttons {
-  margin: 10px 0;
-  display: flex;
-  justify-content: space-between;
-}
-.projects__item-description-buttons a {
-  border: 1px solid rgba(255, 255, 255, 0.411);
-  font-weight: 300;
-  padding: 10px 20px;
-  color: white;
-  text-decoration: none;
-  text-align: center;
-  transition: 0.2s;
-  font-size: 1.3rem;
-  width: 48%;
-}
-.projects__item-description-buttons a:hover {
-  border: 1px solid transparent;
-  background-color: #fb7c3c40;
-  color: #fb7c3c;
-}
-
-.visit__GH {
-  text-align: center;
-  margin-top: 15px;
-}
-
-.visit__GH a {
-  color: #fb7c3c;
-  text-decoration: none;
-  font-size: 1.8rem;
-}
-
-/* .projects {
-  padding: 25px;
-  &__item {
-    background-color: $dark-strong;
-    padding: 25px 30px;
-    display: flex;
-    justify-content: space-between;
-    @include darkShadow();
-    img {
-      width: 100%;
-      height: 100%;
-    }
-  }
-
-  &__item-visuals {
-    width: 50%;
-    height: 100%;
-    position: relative;
-    display: flex;
-  }
-
-  &__item-description {
-    width: 50%;
-    text-align: justify;
-    padding-left: 30px;
-    line-height: 2.5rem;
-  }
-
-  &__item-description-buttons {
-    margin: 20px 0;
-    display: flex;
-    justify-content: center;
-    a {
-      border: 1px solid rgba(255, 255, 255, 0.411);
-      font-weight: 300;
-      padding: 10px 20px;
-      color: white;
-      text-decoration: none;
-      margin: 0 5px;
-      transition: 0.2s;
-    }
-
-    a:hover {
-      border: 1px solid transparent;
-      background-color: #fb7c3c40;
-      color: $selection;
-    }
-  }
-
-  h3 {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: absolute;
-    background-color: #00000099;
-    font-size: 4rem;
-    font-weight: 300;
-  }
-} */
-.form {
-  padding: 25px;
-  color: white;
-}
-
-.form__item {
-  width: 100%;
-  max-width: 600px;
-  margin: 0 auto;
-}
-
-.form__item input {
-  width: 100%;
-  height: 35px;
-  padding: 5px 15px;
-  margin: 5px 0 15px;
-}
-
-.form__item textarea {
-  width: 100%;
-  padding: 15px;
-  margin: 5px 0 15px;
-  border: 2px solid transparent;
-}
-
-.form__item input,
-.form__item textarea {
   font-family: "Raleway", sans-serif;
-  background-color: #222;
-  border: none;
-  color: white;
-  font-size: 1.5rem;
-  resize: none;
-}
-
-input:focus-visible,
-textarea:focus-visible {
-  outline: none;
-}
-
-.form__item button {
-  background-color: #222;
-  color: white;
-  font-family: "Roboto", sans-serif;
-  margin: 15px auto;
-  padding: 12px 42px;
-  font-size: 1.7rem;
-  border: none;
-  cursor: pointer;
   font-weight: 600;
-  display: block;
-  transition: 0.3s;
-}
-
-.form__item button:hover {
-  background-color: #fb7c3c40;
-  color: #fb7c3c;
-}
-
-footer {
-  background-color: #222;
-  padding: 25px;
-  color: white;
-  font-weight: 100;
-}
-
-.contact__container {
-  width: 98%;
-  margin: 0 auto;
-  justify-content: space-between;
-}
-
-.contact__social {
-  text-align: center;
-  width: 100%;
-}
-
-.contact__social ul {
-  list-style: none;
-  display: flex;
-  justify-content: center;
-  width: 250px;
-  flex-wrap: wrap;
-  margin: 0 auto;
-}
-
-.contact__social-item {
-  margin: 10px;
-  width: 40px;
-  height: 40px;
-  text-align: center;
-}
-
-.contact__social-item a {
-  color: white;
-  text-decoration: none;
-}
-
-.contact__social-item a i {
-  font-size: 30px;
-  transition: 0.3s;
-}
-
-.contact__social-item:hover a i {
-  font-size: 4rem;
-  transition: 0.3s;
-  color: #fb7c3c;
-}
-
-.contact__social p {
-  margin-bottom: 20px;
-}
-
-.contact__email {
-  text-align: center;
-}
-
-.contact__email h4 {
-  margin-top: 5px;
-  font-size: 1.7rem;
-  font-weight: 400;
 }
 
 /*# sourceMappingURL=module.css.map */
