--- a/styles/projects.css
+++ b/styles/projects.css
@@ -1,163 +1,17 @@
-.projects {
-  padding: 25px;
-}
-.projects__item-visuals {
-  width: 100%;
-  height: 180px;
-  position: relative;
-  display: flex;
-  max-width: 420px;
-  margin: 0 auto;
-}
-.projects__item-visuals h3 {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  background-color: #00000075;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-weight: 400;
-  font-size: 3.5rem;
-  transition: 0.4s;
-}
-.projects__item-visuals img {
-  width: 100%;
-  object-fit: cover;
-}
-.projects__item-visuals-tools {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  background-color: #000000b6;
-  opacity: 0;
-  transition: 0.4s;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-}
-.projects__item-visuals-tools h4 {
-  text-align: center;
-  padding-bottom: 8px;
-  font-size: 1.7rem;
-}
-.projects__item-visuals-tools ul {
-  font-size: 1.4rem;
-  width: 90%;
-  margin: 0 auto;
-}
-.projects__item-visuals-tools li {
-  padding-bottom: 5px;
-}
-.projects__item-visuals ul {
-  list-style: none;
-}
-.projects__item-description {
-  max-width: 420px;
-  margin: 0 auto;
-  line-height: 2.3rem;
-  margin-top: 5px;
-}
-.projects__item-visuals:hover h3 {
-  opacity: 0;
-}
-.projects .projects__item-visuals:hover .projects__item-visuals-tools {
-  opacity: 1;
-}
+/* Error: Undefined variable.
+ *    ,
+ * 98 |       color: $selection;
+ *    |              ^^^^^^^^^^
+ *    '
+ *   styles/projects.scss 98:14  root stylesheet */
 
-.projects__item-description-buttons {
-  margin: 10px 0;
-  display: flex;
-  justify-content: space-between;
+body::before {
+  font-family: "Source Code Pro", "SF Mono", Monaco, Inconsolata, "Fira Mono",
+      "Droid Sans Mono", monospace, monospace;
+  white-space: pre;
+  display: block;
+  padding: 1em;
+  margin-bottom: 1em;
+  border-bottom: 2px solid black;
+  content: "Error: Undefined variable.\a    \2577 \a 98 \2502        color: $selection;\a    \2502               ^^^^^^^^^^\a    \2575 \a   styles/projects.scss 98:14  root stylesheet";
 }
-.projects__item-description-buttons a {
-  border: 1px solid rgba(255, 255, 255, 0.411);
-  font-weight: 300;
-  padding: 10px 20px;
-  color: white;
-  text-decoration: none;
-  text-align: center;
-  transition: 0.2s;
-  font-size: 1.3rem;
-  width: 48%;
-}
-.projects__item-description-buttons a:hover {
-  border: 1px solid transparent;
-  background-color: #fb7c3c40;
-  color: #fb7c3c;
-}
-
-.visit__GH {
-  text-align: center;
-  margin-top: 15px;
-}
-
-.visit__GH a {
-  color: #fb7c3c;
-  text-decoration: none;
-  font-size: 1.8rem;
-}
-
-/* .projects {
-  padding: 25px;
-  &__item {
-    background-color: $dark-strong;
-    padding: 25px 30px;
-    display: flex;
-    justify-content: space-between;
-    @include darkShadow();
-    img {
-      width: 100%;
-      height: 100%;
-    }
-  }
-
-  &__item-visuals {
-    width: 50%;
-    height: 100%;
-    position: relative;
-    display: flex;
-  }
-
-  &__item-description {
-    width: 50%;
-    text-align: justify;
-    padding-left: 30px;
-    line-height: 2.5rem;
-  }
-
-  &__item-description-buttons {
-    margin: 20px 0;
-    display: flex;
-    justify-content: center;
-    a {
-      border: 1px solid rgba(255, 255, 255, 0.411);
-      font-weight: 300;
-      padding: 10px 20px;
-      color: white;
-      text-decoration: none;
-      margin: 0 5px;
-      transition: 0.2s;
-    }
-
-    a:hover {
-      border: 1px solid transparent;
-      background-color: #fb7c3c40;
-      color: $selection;
-    }
-  }
-
-  h3 {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: absolute;
-    background-color: #00000099;
-    font-size: 4rem;
-    font-weight: 300;
-  }
-} */
-
-/*# sourceMappingURL=projects.css.map */
